# HurricaneEngine3D

./: .gitignore  .gitmodules  CMakeLists.txt  Dbg.cap  HurricaneEngine3D.sln  LICENSE  README.md  generate_compile_json.sh
Common/: Logger.h
Launcher/: CMakeLists.txt  Engine.cpp  Engine.h  Launcher.vcxproj  Source.cpp  main.cpp
PxPhys/: CMakeLists.txt  CharacterController.cpp  Physics.cpp  Physics.h  PxPhys.vcxproj  PxPhys.vcxproj.filters
VkRender/: CMakeLists.txt  Render.cpp  Render.h  Surface.cpp  Surface.h  Test.cpp  VkRender.vcxproj  VkRender.vcxproj.filters  VulkanBackend.cpp  VulkanBackend.h  VulkanCamera.cpp  VulkanCamera.h  VulkanCommandQueueDispatcher.cpp  VulkanCommandQueueDispatcher.h  VulkanDescriptorSetOrginizer.cpp  VulkanDescriptorSetOrginizer.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineCollection.cpp  VulkanPipelineCollection.h  VulkanShaderManager.cpp  VulkanShaderManager.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  main.cpp  render_utils.h
VkRender/shaders/: triangle-primitive.frag.glsl  triangle-primitive.frag.spv  triangle-primitive.vert.glsl  triangle-primitive.vert.spv  triangle.frag.glsl  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
common/: timer.h
docs/: structure.dia
include/common/: logger.h  stack_string.h  timer.h
include/interfaces/: RenderBackend.h  RenderCamera.h  RenderCommandQueueDispatcher.h  RenderMesh.h  RenderPipelineCollection.h  ShaderManager.h
interfaces/: RenderBackend.h  RenderCommandQueueDispatcher.h  RenderPipelineCollection.h  ShaderManager.h
launcher/: CMakeLists.txt  Engine.cpp  main.cpp
physics/: CMakeLists.txt  CharacterController.cpp  CharacterController.h  Physics.cpp  Physics.h
renderer/: CMakeLists.txt  VulkanBackend.cpp  VulkanBackend.h  VulkanCamera.cpp  VulkanCamera.h  VulkanCommandQueueDispatcher.cpp  VulkanDescriptorSetOrginizer.cpp  VulkanDescriptorSetOrginizer.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanMesh.cpp  VulkanShaderManager.cpp  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  compile_shaders.sh  render_utils.h
renderer/shaders/: triangle-primitive.frag.glsl  triangle-primitive.frag.spv  triangle-primitive.vert.spv  triangle.frag.spv  triangle.vert.spv
